--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "name": "Mnist_LeNet",
+    "name": "BouncingMnist_Asvi",
     "n_gpu": 1,
 
     "arch": {
-        "type": "MnistModel",
+        "type": "BouncingMnistModel",
         "args": {}
     },
     "data_loader": {
-        "type": "MnistDataLoader",
+        "type": "BouncingMnistDataLoader",
         "args":{
             "data_dir": "data/",
             "batch_size": 128,
@@ -24,26 +24,23 @@
             "amsgrad": true
         }
     },
-    "loss": "nll_loss",
-    "metrics": [
-        "accuracy", "top_k_acc"
-    ],
     "lr_scheduler": {
-        "type": "StepLR",
+        "type": "ReduceLROnPlateau",
         "args": {
             "step_size": 50,
             "gamma": 0.1
         }
     },
     "trainer": {
-        "epochs": 100,
+        "epochs": 1000,
+        "num_particles": 8,
 
         "save_dir": "saved/",
         "save_period": 1,
         "verbosity": 2,
-        
+
         "monitor": "min val_loss",
-        "early_stop": 10,
+        "early_stop": 50,
 
         "tensorboard": true
     }
