--- a/config.json
+++ b/config.json
@@ -10,25 +10,20 @@
         "type": "BouncingMnistDataLoader",
         "args":{
             "data_dir": "data/",
-            "batch_size": 128,
+            "batch_size": 64,
             "shuffle": true,
             "validation_split": 0.1,
-            "num_workers": 2
+            "num_workers": 0
         }
     },
     "optimizer": {
         "type": "Adam",
-        "args":{
-            "lr": 0.001,
-            "weight_decay": 0,
-            "amsgrad": true
-        }
-    },
-    "lr_scheduler": {
-        "type": "ReduceLROnPlateau",
         "args": {
-            "step_size": 50,
-            "gamma": 0.1
+            "optim_args": {
+                "lr": 0.001,
+                "weight_decay": 0,
+                "amsgrad": true
+            }
         }
     },
     "trainer": {
