--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "BouncingMnistModel",
+        "type": "BouncingMnistAsvi",
         "args": {}
     },
     "data_loader": {
