--- a/ppc_bmnist_config.json
+++ b/ppc_bmnist_config.json
@@ -36,8 +36,7 @@
         "verbosity": 2,
         "type": "PpcTrainer",
         "args": {
-            "num_particles": 8,
-            "num_sweeps": 1
+            "num_particles": 8
         }
     }
 }
