--- a/ppc_mnist_config.json
+++ b/ppc_mnist_config.json
@@ -28,11 +28,12 @@
             }
         }
     },
+    "metrics": ["ess", "log_marginal"],
     "trainer": {
         "epochs": 100,
         "monitor": "min val_loss",
         "save_dir": "saved/",
-        "save_period": 1,
+        "save_period": 50,
         "tensorboard": true,
         "verbosity": 2,
         "type": "PpcTrainer",
