--- a/ppc_bmnist_config.json
+++ b/ppc_bmnist_config.json
@@ -12,7 +12,7 @@
         "type": "BouncingMnistDataLoader",
         "args":{
             "data_dir": "data/",
-            "batch_size": 64,
+            "batch_size": 32,
             "validation_split": 0.1,
             "num_workers": 0
         }
@@ -27,8 +27,9 @@
             }
         }
     },
+    "metrics": ["ess", "log_marginal"],
     "trainer": {
-        "epochs": 200,
+        "epochs": 1000,
         "monitor": "min val_loss",
         "save_dir": "saved/",
         "save_period": 1,
