experiments/ppc_mnist_config.json: avoid passing separate temperature argument
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_mnist_config.json
+++ b/experiments/ppc_mnist_config.json
@@ -4,9 +4,7 @@
 
     "arch": {
         "type": "MnistPpc",
-        "args": {
-            "temperature": 0.01
-        }
+        "args": {}
     },
     "data_loader": {
         "type": "MnistDataLoader",
