experiments/ppc_bmnist_config.json: remove unused temperature parameter
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_bmnist_config.json
+++ b/experiments/ppc_bmnist_config.json
@@ -4,9 +4,7 @@
 
     "arch": {
         "type": "BouncingMnistPpc",
-        "args": {
-            "temperature": 0.001
-        }
+        "args": {}
     },
     "data_loader": {
         "type": "BouncingMnistDataLoader",
