--- a/experiments/ppc_mnist_config.json
+++ b/experiments/ppc_mnist_config.json
@@ -11,6 +11,7 @@
         "args":{
             "data_dir": "data/",
             "drop_last": false,
+            "shuffle": true,
             "batch_size": 512,
             "validation_split": 0.1,
             "num_workers": 2
