experiments/ppc_bmnist_config.json: switch on dataset shuffling
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_bmnist_config.json
+++ b/experiments/ppc_bmnist_config.json
@@ -11,6 +11,7 @@
         "args":{
             "data_dir": "data/",
             "batch_size": 512,
+            "shuffle": true,
             "validation_split": 0.1,
             "num_workers": 2
         }
