--- a/experiments/ppc_bmnist_config.json
+++ b/experiments/ppc_bmnist_config.json
@@ -36,7 +36,7 @@
           "factor": 0.9
         }
     },
-    "metrics": ["ess", "log_marginal"],
+    "metrics": ["ess", "log_marginal", "log_joint"],
     "trainer": {
         "epochs": 1000,
         "monitor": "min val_loss",
