--- a/experiments/ppc_bmnist_config.json
+++ b/experiments/ppc_bmnist_config.json
@@ -4,7 +4,9 @@
 
     "arch": {
         "type": "BouncingMnistPpc",
-        "args": {}
+        "args": {
+          "temperature": 0.0001
+        }
     },
     "data_loader": {
         "type": "BouncingMnistDataLoader",
@@ -20,7 +22,7 @@
         "type": "Adam",
         "args": {
             "optim_args": {
-                "lr": 0.001,
+                "lr": 0.0001,
                 "weight_decay": 0,
                 "amsgrad": true
             }
@@ -44,7 +46,8 @@
         "verbosity": 2,
         "type": "PpcTrainer",
         "args": {
-            "num_particles": 8
+            "num_particles": 8,
+            "num_sweeps": 4
         }
     }
 }
