--- a/experiments/ppc_minibmnist_config.json
+++ b/experiments/ppc_minibmnist_config.json
@@ -4,9 +4,7 @@
 
     "arch": {
         "type": "BouncingMnistPpc",
-        "args": {
-          "temperature": 0.0001
-        }
+        "args": {}
     },
     "data_loader": {
         "type": "MiniBouncingMnistDataLoader",
@@ -22,7 +20,7 @@
         "type": "Adam",
         "args": {
             "optim_args": {
-                "lr": 0.0001,
+                "lr": 0.001,
                 "weight_decay": 0,
                 "amsgrad": true
             }
