experiments/ppc_flowers_config: increase T, epochs, and particles w/ thin UNet
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_flowers_config.json
+++ b/experiments/ppc_flowers_config.json
@@ -7,7 +7,8 @@
         "args": {
             "flash_attn": false,
             "img_side": 64,
-            "T": 12
+            "T": 50,
+            "thick": false
         }
     },
     "data_loader": {
@@ -26,7 +27,7 @@
         "type": "Adam",
         "args": {
             "optim_args": {
-                "lr": 8.5e-5,
+                "lr": 1e-5,
                 "weight_decay": 0,
                 "amsgrad": true
             }
@@ -42,7 +43,7 @@
     },
     "metrics": ["ess", "log_marginal"],
     "trainer": {
-        "epochs": 100,
+        "epochs": 1000,
         "monitor": "min val_loss",
         "save_dir": "saved/",
         "save_period": 10,
@@ -50,7 +51,7 @@
         "verbosity": 2,
         "type": "PpcTrainer",
         "args": {
-            "num_particles": 2
+            "num_particles": 5
         }
     }
 }
