--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -4,7 +4,9 @@
 
     "arch": {
         "type": "CelebAPpc",
-        "args": {}
+        "args": {
+          "img_side": 128
+        }
     },
     "data_loader": {
         "type": "CelebADataLoader",
@@ -12,10 +14,10 @@
             "data_dir": "data/",
             "drop_last": false,
             "shuffle": true,
-            "batch_size": 1024,
+            "batch_size": 256,
             "validation_split": 0.1,
             "num_workers": 2,
-            "img_side": 64
+            "img_side": 128
         }
     },
     "optimizer": {
@@ -31,14 +33,14 @@
     "lr_scheduler": {
         "type": "ReduceLROnPlateau",
         "args": {
-          "patience": 100,
-          "cooldown": 50,
+          "patience": 50,
+          "cooldown": 10,
           "factor": 0.9
         }
     },
     "metrics": ["ess", "log_marginal"],
     "trainer": {
-        "epochs": 100,
+        "epochs": 1000,
         "monitor": "min val_loss",
         "save_dir": "saved/",
         "save_period": 10,
