experiments/ppc_flowers_config.json: use model parameters for Diffusers UNet
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_flowers_config.json
+++ b/experiments/ppc_flowers_config.json
@@ -5,10 +5,9 @@
     "arch": {
         "type": "DiffusionPpc",
         "args": {
-            "flash_attn": false,
             "img_side": 64,
             "T": 50,
-            "thick": false
+            "thin_unet": false
         }
     },
     "data_loader": {
