Revert "experiments/ppc_flowers_config.json: use model parameters for Diffusers UNet"
This reverts commit e221fb954b8e22d5aec296641cd9aff11c33ef7e.

--- a/experiments/ppc_flowers_config.json
+++ b/experiments/ppc_flowers_config.json
@@ -5,9 +5,10 @@
     "arch": {
         "type": "DiffusionPpc",
         "args": {
+            "flash_attn": false,
             "img_side": 64,
             "T": 50,
-            "thin_unet": false
+            "thick": false
         }
     },
     "data_loader": {
