--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -5,6 +5,16 @@
         "type": "CelebAPpc",
         "args": {}
     },
+    "checkpoint": {
+        "type": "ModelCheckpoint",
+        "args": {
+            "auto_insert_metric_name": false,
+            "every_n_epochs": 5,
+            "filename": "checkpoint_{epoch}",
+            "mode": "min",
+            "monitor": "valid/loss"
+        }
+    },
     "data_module": {
         "type": "CelebADataModule",
         "args":{
@@ -17,7 +27,7 @@
         "args": {
             "cooldown": 10,
             "factor": 0.9,
-            "lr": 1e-3,
+            "lr": 8e-4,
             "num_particles": 4,
             "num_sweeps": 300,
             "patience": 50
