--- a/experiments/ppc_minibmnist_config.json
+++ b/experiments/ppc_minibmnist_config.json
@@ -1,6 +1,5 @@
 {
     "name": "MiniBouncingMnist_Ppc",
-    "n_gpu": 1,
 
     "arch": {
         "type": "BouncingMnistPpc",
@@ -22,7 +21,7 @@
         "type": "MiniBouncingMnistDataModule",
         "args": {
             "data_dir": "data/",
-            "batch_size": 512
+            "batch_size": 4096
         }
     },
     "lmodule": {
@@ -44,7 +43,7 @@
         "type": "Trainer",
         "args": {
           "default_root_dir": "saved/",
-          "devices": 2,
+          "devices": [4, 5, 6, 7],
           "max_epochs": 1000,
           "min_epochs": 1
         }
