--- a/experiments/ppc_minibmnist_config.json
+++ b/experiments/ppc_minibmnist_config.json
@@ -21,7 +21,7 @@
         "type": "MiniBouncingMnistDataModule",
         "args": {
             "data_dir": "data/",
-            "batch_size": 4096
+            "batch_size": 192
         }
     },
     "lmodule": {
@@ -43,7 +43,7 @@
         "type": "Trainer",
         "args": {
           "default_root_dir": "saved/",
-          "devices": [4, 5, 6, 7],
+          "devices": 1,
           "max_epochs": 1000,
           "min_epochs": 1
         }
