--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -19,7 +19,7 @@
         "type": "CelebADataModule",
         "args":{
             "data_dir": "data/",
-            "batch_size": 2048
+            "batch_size": 4096
         }
     },
     "lmodule": {
@@ -27,10 +27,11 @@
         "args": {
             "cooldown": 10,
             "factor": 0.9,
-            "lr": 1e-6,
+            "lr": 1e-1,
             "num_particles": 4,
             "num_sweeps": 1,
-            "patience": 50
+            "patience": 50,
+            "resampling": false
         }
     },
     "logger": {
