experiments/ppc_celeba_config.json: rough optimization, converged to good loss
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -19,7 +19,7 @@
         "type": "CelebADataModule",
         "args":{
             "data_dir": "data/",
-            "batch_size": 4096
+            "batch_size": 2048
         }
     },
     "lmodule": {
@@ -27,11 +27,10 @@
         "args": {
             "cooldown": 10,
             "factor": 0.9,
-            "lr": 1e-1,
+            "lr": 1e-2,
             "num_particles": 4,
             "num_sweeps": 1,
-            "patience": 50,
-            "resampling": false
+            "patience": 50
         }
     },
     "logger": {
@@ -42,7 +41,7 @@
         "type": "Trainer",
         "args": {
           "default_root_dir": "saved/",
-          "devices": [0],
+          "devices": -1,
           "max_epochs": 4500,
           "min_epochs": 1
         }
