experiments/ppc_celeba_config: configure for experiment against Langevin PC
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -1,9 +1,12 @@
 {
-    "name": "CelebA_Ppc",
+    "name": "Heteroskedastic_CelebA_Ppc",
 
     "arch": {
-        "type": "CelebAPpc",
-        "args": {}
+        "type": "GeneratorPpc",
+        "args": {
+            "heteroskedastic": true,
+            "z_dim": 40
+        }
     },
     "checkpoint": {
         "type": "ModelCheckpoint",
