--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -30,8 +30,9 @@
         "args": {
             "cooldown": 10,
             "factor": 0.9,
-            "lr": 1e-3,
-            "num_particles": 4,
+            "lrp": 1e-3,
+            "lrq": 1e-1,
+            "num_particles": 16,
             "num_sweeps": 300,
             "patience": 50
         }
