--- a/experiments/ppc_emnist_config.json
+++ b/experiments/ppc_emnist_config.json
@@ -27,7 +27,8 @@
         "args": {
             "cooldown": 10,
             "factor": 0.9,
-            "lr": 0.01,
+            "lrp": 0.01,
+            "lrq": 0.01,
             "num_particles": 2,
             "num_sweeps": 1,
             "patience": 50
