--- a/experiments/ppc_minibmnist_config.json
+++ b/experiments/ppc_minibmnist_config.json
@@ -3,15 +3,13 @@
 
     "arch": {
         "type": "BouncingMnistPpc",
-        "args": {
-            "mnist_mean": "data/bmnist/mnist_mean.npy"
-        }
+        "args": {}
     },
     "checkpoint": {
         "type": "ModelCheckpoint",
         "args": {
             "auto_insert_metric_name": false,
-            "every_n_epochs": 10,
+            "every_n_epochs": 100,
             "filename": "checkpoint_{epoch}",
             "mode": "min",
             "monitor": "valid/loss"
@@ -21,7 +19,7 @@
         "type": "MiniBouncingMnistDataModule",
         "args": {
             "data_dir": "data/",
-            "batch_size": 64
+            "batch_size": 96
         }
     },
     "lmodule": {
@@ -29,9 +27,10 @@
         "args": {
             "cooldown": 50,
             "factor": 0.9,
-            "lr": 0.01,
+            "lrp": 1e-4,
+            "lrq": 1e-4,
             "num_particles": 10,
-            "num_sweeps": 1,
+            "num_sweeps": 5,
             "patience": 100
         }
     },
@@ -43,7 +42,7 @@
         "type": "Trainer",
         "args": {
           "default_root_dir": "saved/",
-          "devices": 1,
+          "devices": [7],
           "max_epochs": 1000,
           "min_epochs": 1
         }
