--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -22,8 +22,9 @@
         "type": "CelebADataModule",
         "args":{
             "data_dir": "data/",
-            "batch_size": 512,
-            "num_workers": 8
+            "batch_size": 64,
+            "num_workers": 8,
+            "side": 64
         }
     },
     "lmodule": {
@@ -32,7 +33,7 @@
             "cooldown": 10,
             "factor": 0.9,
             "lrp": 8e-4,
-            "lrq": 8e-4,
+            "lrq": 8e-5,
             "num_particles": 16,
             "num_sweeps": 1,
             "patience": 50
