experiments/vae_celeba_config.json: turn off likelihood discretization
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/vae_celeba_config.json
+++ b/experiments/vae_celeba_config.json
@@ -4,6 +4,7 @@
     "arch": {
         "type": "ConvolutionalVae",
         "args": {
+            "discretize": false,
             "z_dim": 40
         }
     },
