--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -5,7 +5,8 @@
         "type": "GeneratorPpc",
         "args": {
             "heteroskedastic": true,
-            "z_dim": 40
+            "z_dim": 40,
+            "discretize": false
         }
     },
     "checkpoint": {
