--- a/experiments/ppc_celeba_config.json
+++ b/experiments/ppc_celeba_config.json
@@ -6,7 +6,7 @@
         "args": {
             "heteroskedastic": true,
             "z_dim": 40,
-            "discretize": false
+            "discretize": true
         }
     },
     "checkpoint": {
@@ -49,7 +49,7 @@
         "args": {
           "default_root_dir": "saved/",
           "devices": -1,
-          "max_epochs": 900,
+          "max_epochs": 450,
           "min_epochs": 1
         }
     }
