--- a/experiments/vae_celeba_config.json
+++ b/experiments/vae_celeba_config.json
@@ -46,7 +46,7 @@
         "type": "Trainer",
         "args": {
           "default_root_dir": "saved/",
-          "devices": -1,
+          "devices": [7],
           "max_epochs": 4500,
           "min_epochs": 1
         }
