experiments/ppc_minibmnist_eval: not very good
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_minibmnist_config.json
+++ b/experiments/ppc_minibmnist_config.json
@@ -18,8 +18,8 @@
     "data_module": {
         "type": "MiniBouncingMnistDataModule",
         "args": {
-            "data_dir": "data/",
-            "batch_size": 96
+            "data_dir": "data/apg_training",
+            "batch_size": 5
         }
     },
     "lmodule": {
