--- a/experiments/dcpc_bmnist_config.json
+++ b/experiments/dcpc_bmnist_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "BouncingMnist_Ppc",
+    "name": "BouncingMnist_Dcpc",
 
     "arch": {
-        "type": "BouncingMnistPpc",
+        "type": "BouncingMnistDcpc",
         "args": {}
     },
     "checkpoint": {
@@ -23,7 +23,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 50,
             "factor": 0.9,
