experiments/dcpc_celeba_eval: rename PPC to DCPC in CelebA generator experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_celeba_config.json
+++ b/experiments/dcpc_celeba_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "Heteroskedastic_CelebA_Ppc",
+    "name": "Heteroskedastic_CelebA_Dcpc",
 
     "arch": {
-        "type": "GeneratorPpc",
+        "type": "GeneratorDcpc",
         "args": {
             "heteroskedastic": true,
             "z_dim": 40,
@@ -29,7 +29,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 10,
             "factor": 0.9,
