--- a/experiments/dcpc_celeba_homoskedastic_config.json
+++ b/experiments/dcpc_celeba_homoskedastic_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "Homoskedastic_CelebA_Ppc",
+    "name": "Homoskedastic_CelebA_Dcpc",
 
     "arch": {
-        "type": "GeneratorPpc",
+        "type": "GeneratorDcpc",
         "args": {
             "discretize": false,
             "heteroskedastic": false,
@@ -28,7 +28,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 10,
             "factor": 0.9,
