--- a/experiments/dcpc_fashionmnist_config.json
+++ b/experiments/dcpc_fashionmnist_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "FashionMnist_Ppc",
+    "name": "FashionMnist_Dcpc",
 
     "arch": {
-        "type": "MnistPpc",
+        "type": "MnistDcpc",
         "args": {}
     },
     "checkpoint": {
@@ -23,7 +23,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 10,
             "factor": 0.9,
