experiments/dcpc_flowers_eval: rename PPC->DCPC in flowers diffusion experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_flowers_config.json
+++ b/experiments/dcpc_flowers_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "FlowersDiffusion_Ppc",
+    "name": "FlowersDiffusion_Dcpc",
 
     "arch": {
-        "type": "DiffusionPpc",
+        "type": "DiffusionDcpc",
         "args": {
             "flash_attn": true,
             "hidden_dim": 32,
@@ -29,7 +29,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 50,
             "factor": 0.9,
