experiments/dcpc_minibmnist_eval: rename to DCPC for Mini-BMNIST experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_minibmnist_config.json
+++ b/experiments/dcpc_minibmnist_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "MiniBouncingMnist_Ppc",
+    "name": "MiniBouncingMnist_Dcpc",
 
     "arch": {
-        "type": "BouncingMnistPpc",
+        "type": "BouncingMnistDcpc",
         "args": {}
     },
     "checkpoint": {
@@ -23,7 +23,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 50,
             "factor": 0.9,
