--- a/experiments/dcpc_seqmem_config.json
+++ b/experiments/dcpc_seqmem_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "SequentialMemory_Ppc",
+    "name": "SequentialMemory_Dcpc",
 
     "arch": {
-        "type": "SequentialMemoryPpc",
+        "type": "SequentialMemoryDcpc",
         "args": {}
     },
     "checkpoint": {
@@ -25,7 +25,7 @@
         }
     },
     "lmodule": {
-        "type": "LightningPpc",
+        "type": "LightningDcpc",
         "args": {
             "cooldown": 50,
             "factor": 0.9,
